<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/selectMainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

	<TableLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
	    <TableRow>
	        
	    	<Button
			    android:id="@+id/firstButton"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:text="@string/simplicite_first"
			    android:layout_weight="1" />
	    	<Button
			    android:id="@+id/prevButton"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:text="@string/simplicite_prev"
			    android:layout_weight="1" />
	    	<TextView
			    android:id="@+id/pageTextView"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:gravity="center" />
	    	<Button
			    android:id="@+id/nextButton"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:text="@string/simplicite_next"
			    android:layout_weight="1" />			<Button
			    android:id="@+id/lastButton"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:text="@string/simplicite_last"
			    android:layout_weight="1" />
				        
	    </TableRow>
			    		
	</TableLayout>

</LinearLayout>